# sysdmp.github.io

./: .gitignore  LICENSE  Makefile  README.md  balanced-arisen.json  ddda-build-solver.py  index.html  index.js  package-lock.json  package.json  pyproject.toml
builds/: README.md  balanced-arisen.json  balanced-arisen.txt  balanced-physical-pawn.json  balanced-physical-pawn.txt
pycli/: README.md  ddda-build-solver.py  pyproject.toml
pycli/builds/: README.md  balanced-arisen.json  balanced-arisen.txt  balanced-physical-pawn.json  balanced-physical-pawn.txt  regen.py
src/: app.js  bias-study.mjs  build.mjs  data.js  highs-loader.js  index.html  solver.js  test-dom.mjs  test-python.mjs  test.mjs
web/: README.md  data.js  index.js  package-lock.json  package.json  solver.js  test.mjs
web/src/: bias-study.mjs  data.js  solver.js  test-python.mjs
