[project]
name = "dragons-dogma-stat-planner"
version = "3.0.0"
description = "Solver for Dragon's Dogma™: Dark Arisen level-200 character builds — finds the vocation leveling plan that meets target stats."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "sysdmp", email = "200008240+sysdmp@users.noreply.github.com" },
]
keywords = ["dragons-dogma", "dark-arisen", "build", "optimization", "ilp", "solver"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pulp>=3.3.2",
]

# Ruff lint config (run via `uvx ruff check pycli`, wired into `npm test`). Pin the
# rule set + target so the check is stable across ruff versions. Ruff's default
# selection — pyflakes (F: real bugs like unused imports/names) plus the pycodestyle
# error subset E4/E7/E9 (imports, statement style, syntax) — but NOT E501
# line-too-long, which this codebase intentionally exceeds in data tables and help text.
[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]

